--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,6 +7,7 @@ body{
     margin: 0;
     padding: 0;
     width: 100%;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 /* XX-Small Devices (small phones, <380px) */
