--- a/src/app/(all-pages)/notFoundPage/notFoundPage.module.css
+++ b/src/app/(all-pages)/notFoundPage/notFoundPage.module.css
@@ -1,14 +1,67 @@
-.container {
-    width: 100%;
-    height: 100vh;
+.page_404 {
+    margin: 0;
+    padding: 0;
+    background: #fff;
+    font-family: 'Poppins';
     display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: center;
+    align-items: center;
+    height: 100vh; /* Make sure the height is 100% of the viewport height */
+}
+
+.four_zero_four_bg {
+    background: url(../../../../public/404.gif) no-repeat center center;
+    background-size: contain; /* Adjust to 'cover' if you want the gif to cover the container */
+    width: 100%;
+    height: 400px;
+    justify-content: center;
     align-items: center;
 }
 
-.top {
+.four_zero_four_bg h1 {
+    font-size: 80px;
+    text-align: center;
+    margin-top: 80px; /* Adjust margin to align text properly */
+}
+
+.content_box_404 {
+    text-align: center;
+    margin-top: -100px;
+}
+
+.content_box_404 h3 {
+    font-size: 40px;
+}
+
+.content_box_404 p {
+    margin-top: -20px;
+}
+
+.rtnButton {
     display: flex;
-    flex-direction: column;
     align-items: center;
+    justify-content: center;
+    margin-top: 20px;
+}
+
+.rtnButton a {
+    color: #fff;
+    text-decoration: none;
+    padding: 10px 20px;
+    background: rgba(0, 0, 0);
+    display: inline-block;
+    border-radius: clamp(6px, 0.8vw, 16px);
+    box-shadow: 0 6px 8px rgba(0, 0, 0, 20%);
+    transition: background-color 0.3s ease-in-out;
+}
+
+.rtnButton a:hover {
+    background-color: rgb(18, 102, 211);
+    box-shadow: 0 6px 8px rgba(0, 0, 0, 25%);
+}
+
+.rtnButton a:active {
+    background-color: #004494;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 30%);
+    transform: translateY(2px);
 }
