--- a/src/app/(all-pages)/notFoundPage/notFoundPage.module.css
+++ b/src/app/(all-pages)/notFoundPage/notFoundPage.module.css
@@ -13,7 +13,8 @@
     background: url(../../../../public/404.gif) no-repeat center center;
     background-size: contain; /* Adjust to 'cover' if you want the gif to cover the container */
     width: 100%;
-    height: 400px;
+    height: 350px;
+    display: flex;
     justify-content: center;
     align-items: center;
 }
