--- a/src/components/Nav/nav.module.css
+++ b/src/components/Nav/nav.module.css
@@ -1,5 +1,6 @@
 .container {
-    height: calc(100vh - 40px);
+    /* height: calc(100vh - 40px); */
+    height: 100%;
     display: flex;
     flex-direction: column;
     background-color: black;
@@ -234,7 +235,7 @@
 .innerContainer {
     position: absolute;
     left: 5px;
-    height: calc(100vh - 40px);
+    height: 100%;
     display: flex;
     flex-direction: column;
     background-color: transparent;
@@ -323,4 +324,49 @@
     opacity: 1;
     transition: opacity 0.4s ease-out, transform 0.5s ease-out;
     transform: translateX(-4px);
+}
+
+
+/* Extra Large Screen (1200px and above) */
+@media (min-width: 1200px) {
+
+}
+
+/* Large Screen (992px to 1199px) */
+@media (min-width: 992px) and (max-width: 1199px) {
+
+}
+
+/* Medium Screen (768px to 991px) */
+@media (min-width: 768px) and (max-width: 991px) {
+
+}
+
+/* Small Screen (767px and below) */
+@media (max-width: 767px) {
+    .activeContainer {
+        width: 100vw; /* Adjust the width as needed */
+    }
+
+    .inactiveContainer {
+        width: 0; /* Adjust the width as needed */
+    }
+
+    .secondContainer {
+        display: none;
+    }
+
+    .sectionIcon {
+        display: none;
+    }
+
+    .icon, .arrowDown, .arrowUp {
+        opacity: 0;
+        transition: opacity 1s ease-in-out;
+    }
+
+    .iconActive {
+        opacity: 1;
+        transition: opacity 1s ease-in-out;
+    }
 }
