--- a/src/app/(all-pages)/(other-pages)/layout.module.css
+++ b/src/app/(all-pages)/(other-pages)/layout.module.css
@@ -15,11 +15,24 @@
 .child {
     flex-grow: 1;
     height: 100%;
+    overflow-y: auto;
+    z-index: 0;
+    position: relative;
 }
 
 .loadingComp{
     height: 100%;
+    width: 100%;
     overflow: hidden;
+    position: absolute;
+    top: 0;
+    z-index: -1;
+    opacity: 0;
+}
+
+.loadingCompHide {
+    z-index: 1;
+    opacity: 1;
 }
 
 
@@ -43,12 +56,10 @@
     .innerContainer:first-child {
         position: absolute;
         width: 100%;
-        z-index: 1;
     }
 
     .child {
         position: absolute;
         width: 100%;
-        z-index: -1;
     }
 }
