--- a/src/components/Nav/nav.module.css
+++ b/src/components/Nav/nav.module.css
@@ -7,6 +7,7 @@
     transition: width 1s ease-in-out;
     overflow-y: scroll;
     direction: rtl;
+    z-index: 1;
 }
 
 .container *{
@@ -224,6 +225,7 @@
 
 .secondContainer {
     position: relative;
+    z-index: 1;
 }
 
 .secondContainer * {
@@ -353,7 +355,7 @@
     }
 
     .secondContainer {
-        display: none;
+        left: -1000px;
     }
 
     .sectionIcon {
