--- a/src/components/authForms/authForms.module.css
+++ b/src/components/authForms/authForms.module.css
@@ -108,7 +108,8 @@
     height: 40%;
     width: calc(100% - 20px);
     padding-left: 15px;
-    color: rgba(0, 0, 0, 80%);
+    /* color: rgba(0, 0, 0, 80%); */
+    color: rgb(18, 102, 211);
     font-size: 15px;
     font-weight: 500;
 }
@@ -117,10 +118,40 @@
     outline-color: rgb(18, 102, 211);
 }
 
+.field input:focus::placeholder{
+    color: rgba(18, 102, 211, 0.5);
+}
+
 .field input::placeholder {
-    color: rgba(0, 0, 0, 30%);
+    color: rgba(0, 0, 0, 0.17);
     font-style: italic;
     font-size: 12px;
+    letter-spacing: 0.5px;
+}
+
+.field input[type='email'] {
+    color: rgb(18, 102, 211);
+    letter-spacing: clamp(0.5px, 0.5vw, 2px);
+}
+
+.field .pswd {
+    letter-spacing: clamp(0.5px, 1vw, 10px);
+}
+
+.pwContainer{
+    /* border: 1px solid red; */
+    display: flex;
+    align-items: center;
+    height: 40%;
+    margin-top: 1px;
+}
+
+.pwContainer input {
+    height: 100%;
+}
+
+.pwContainer * {
+    /* border: 1px solid red; */
 }
 
 .btnsL, .btnsR {
@@ -162,6 +193,12 @@
     background-color: #004494; /* Even darker shade on active */
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3); /* Smaller shadow on active */
     transform: translateY(2px); /* Move the button down */
+}
+
+.submitBtn:disabled, .submitBtn:disabled:hover, .submitBtn:disabled:active{
+    background-color: gray;
+    box-shadow: 0 6px 8px rgba(0, 0, 0, 0.25);
+    transform: translateY(0)
 }
 
 .btns span {
