--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -86,12 +86,23 @@
 }
 
 .profile {
-    width: 30px;
-    height: 30px;
+    width: 27px;
+    height: 27px;
     background-color: white;
     border-radius: 100%;
     margin-right: 10px;
+    padding: 2px;
     cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+}
+
+.profileIcon {
+    color: black;
+    width: 100%;
+    height: 100%;
 }
 
 .bottomContainer {
