--- a/src/app/(all-pages)/authPages/authPages.module.css
+++ b/src/app/(all-pages)/authPages/authPages.module.css
@@ -70,3 +70,22 @@
     /* background-color: white; */
     /* border: 1px solid black; */
 }
+
+.loadingContainer {
+    position: absolute;
+    top: 0;
+    width: 65%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 5;
+}
+
+.loadingLeft {
+    left: 0;
+}
+
+.loadingRight {
+    right: 0;
+}
