--- a/src/components/layout/layout.module.css
+++ b/src/components/layout/layout.module.css
@@ -1,5 +1,7 @@
 .container {
     height: 100vh;
+    position: relative;
+    user-select: none;
 }
 
 .header {
@@ -33,6 +35,44 @@
 .loadingCompHide {
     z-index: 1;
     opacity: 1;
+}
+
+.sessionExpiryContainer {
+    position: absolute;
+    z-index: 10;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(0, 0, 0, 0.3);
+}
+
+.card {
+    border-radius: 8px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    background-color: black;
+    padding: 4px;
+    box-shadow: 0 0 40px 10px rgba(255, 255, 255, 0.85);
+}
+
+.message {
+    text-align: center;
+    padding: 10px 20px;
+}
+
+.btn {
+    background-color: white;
+    color: black;
+    border-radius: 5px;
+    padding: 4px 20px;
+    margin: 10px 0 13px 0;
+    cursor: pointer;
+    text-decoration: none;
 }
 
 
