--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -1,4 +1,5 @@
 .container {
+    position: relative;
     width: 100%;
     height: 100%;
     background-color: black;
@@ -6,6 +7,10 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+}
+
+.container * {
+    user-select: none;
 }
 
 .innerContainer {
@@ -16,7 +21,7 @@
 .hamburger {
     background-color: rgb(255, 255, 255, 0.4);
     border-radius: 5px;
-    width: 20px;
+    min-width: 1.25rem;
     padding: 4px;
     display: flex;
     margin: 0 10px;
@@ -30,6 +35,7 @@
 
 .name {
     /* font-size: 15px; */
+    font-size: 1rem;
     cursor: default;
     user-select: none;
 }
@@ -85,7 +91,19 @@
     justify-content: center;
 }
 
-.profile {
+.bottomContainer {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    gap: 5px;
+    background-color: black;
+    height: 100%;
+    min-width: 130px;
+    z-index: 12;
+}
+
+.profileBtn {
     width: 27px;
     height: 27px;
     background-color: white;
@@ -105,16 +123,63 @@
     height: 100%;
 }
 
-.bottomContainer {
-    border: 1px solid red;
+.profileContainer {
+    position: absolute;
+    right: 6px;
+    top: -40px;
+    background-color: black;
     display: flex;
-    align-items: center;
-    gap: 5px;
+    flex-direction: column;
+    border-radius: 5px;
+    padding: 8px;
+    gap: 8px;
+    z-index: 10;
+    opacity: 0;
+    transition: transform 0.4s ease-in-out, opacity 0.2s ease-in-out;
+}
+
+.profileContainer::before {
+    content: '';
+    border-bottom: 10px solid black;
+    border-right: 8px solid transparent;
+    border-left: 8px solid transparent;
+    position: absolute;
+    right: 13px;
+    top: -8px;
+}
+
+.profileContainerActive {
+    /* right: 10px; */
+    transform: translateY(115%);
+    opacity: 1;
+    transition: transform 0.5s ease-in-out, opacity 1s ease-in-out;
+}
+
+.vwProfile, .logOut {
+    text-decoration: none;
+    color: white;
+    text-wrap: nowrap;
+    cursor: pointer;
+    font-size: 0.9rem;
+}
+
+.vwProfile {
+    border-radius: 5px;
+    padding: 5px 8px;
+}
+
+.vwProfile:hover {
+    background-color: rgb(255, 255, 255, 0.4);
 }
 
 .logOut {
-    background-color: yellow;
-    color: black;
-    padding: 0 5px;
-    cursor: pointer;
+    background-color: rgba(255, 0, 0, 0.9);
+    /* font-weight: 600; */
+    text-align: center;
+    padding: 5px;
+    border-radius: 5px;
+}
+
+.logOut:hover {
+    background-color: red;
 }
