--- a/src/components/layout/layout.module.css
+++ b/src/components/layout/layout.module.css
@@ -1,20 +1,25 @@
 .container {
     height: 100vh;
+    width: 100%;
     position: relative;
     user-select: none;
+    overflow: hidden;
 }
 
 .header {
     height: 40px;
+    width: 100%;
 }
 
 .innerContainer {
     height: calc(100vh - 40px);
+    width: 100%;
     position: relative;
     display: flex;
 }
 
 .child {
+    background-color: white;
     flex-grow: 1;
     height: 100%;
     overflow-y: auto;
@@ -73,6 +78,66 @@
     margin: 10px 0 13px 0;
     cursor: pointer;
     text-decoration: none;
+}
+
+.lock {
+    /* border: 1px solid red; */
+    border-radius: 3px;
+    background-color: rgb(82, 82, 82);
+    padding: 1px;
+    color: white;
+    position: absolute;
+    top: 23px;
+    left: 28px;
+    display: flex;
+    opacity: 0;
+    z-index: -1;
+    cursor: pointer;
+    transition: background-color 0.3s ease-in-out,
+                color 0.3s ease-in-out,
+                opacity 0.5s ease-in-out;
+}
+
+.lock:hover {
+    transform: scale(1.1);
+    color: black;
+    background-color: rgb(224, 224, 224);
+    transition: transform 0.1s ease-out,
+                background-color 0.3s ease-in-out,
+                color 0.3s ease-in-out;
+}
+
+.hint {
+    border: 1.5px solid rgb(224, 224, 224);
+    border-radius: 3px;
+    border-top-left-radius: 0;
+    background-color: black;
+    color: rgb(224, 224, 224);
+    font-size: 10px;
+    padding: 0 3px;
+    font-weight: bold;
+    text-wrap: nowrap;
+    position: absolute;
+    top: 7px;
+    left: 13px;
+    width: 0px;
+    opacity: 0;
+    overflow: hidden;
+    transition: width 0.5s ease-in-out,
+                opacity 1s ease;
+}
+
+.lock:hover .hint {
+    width: 85px;
+    opacity: 1;
+    transition: width 0.4s ease-in-out,
+                opacity 0.4s ease-in-out;
+}
+
+.lockShow {
+    z-index: 10;
+    opacity: 1;
+    transition: opacity 1s ease-in-out;
 }
 
 
