--- a/src/app/(all-pages)/(other-pages)/gestor/InfraGestor/reservations/reservation.module.css
+++ b/src/app/(all-pages)/(other-pages)/gestor/InfraGestor/reservations/reservation.module.css
@@ -1,49 +1,134 @@
 .container {
-    padding: 20px;
-    background-color: white;
-    border-radius: 8px;
-    width: 95%;
-    /* margin: auto; */
-    height: calc(100vh - 80px);
-    margin-left: auto;
-  }
+  padding: 20px;
+  background-color: #ffffff;
+  border-radius: 8px;
+  width: 100%;
+  max-width: 1200px;
+  margin: auto;
+}
 
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.title {
+  flex-grow: 1;
+}
+
+.docInfo {
+  display: flex;
+  gap: 20px;
+}
+
+.buttonRow {
+  margin-bottom: 20px;
+}
+
+.form {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 20px;
+}
+
+.formGroup {
+  display: flex;
+  flex-direction: column;
+}
+
+.inlineGroup {
+  display: flex;
+  gap: 10px;
+}
+
+.formGroup label {
+  margin-bottom: 8px;
+  font-weight: bold;
+}
+
+.input {
+  padding: 8px;
+  border-radius: 4px;
+  border: 1px solid #ccc;
+  width: 100%;
+  box-sizing: border-box;
+}
+
+.tableContainer {
+  margin-top: 20px;
+  overflow-x: auto;
+}
+
+.table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 20px;
+}
+
+.table th,
+.table td {
+  padding: 12px;
+  border: 1px solid #ddd;
+  text-align: center;
+}
+
+.table th {
+  background-color: #f1f1f1;
+}
+
+.buttonGroup {
+  display: flex;
+  gap: 10px;
+  
+}
+
+.button {
+  padding: 10px 20px;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.button:hover {
+  background-color: #0056b3;
+}
+
+/* Responsive Design */
+@media (max-width: 768px) {
   .form {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    gap: 20px;
+    grid-template-columns: 1fr;
   }
 
-  .formGroup {
-    display: flex;
+  .header {
     flex-direction: column;
   }
 
-  .formGroup label {
-    margin-bottom: 8px;
-    font-weight: bold;
+  .table th,
+  .table td {
+    padding: 8px;
   }
 
+  .buttonGroup {
+    flex-direction: flex;
+  }
+
+  .button {
+    margin-bottom: 10px;
+    width: 20%;
+  }
+}
+
+@media (max-width: 480px) {
+  .formGroup label,
   .input {
-    width: 95%;
-    padding: 8px;
-    border-radius: 4px;
-    border: 1px solid #ccc;
-    box-sizing: border-box;
+    font-size: 14px;
   }
 
-  .textarea {
-    width: 95%;
-    padding: 8px;
-    border-radius: 4px;
-    border: 1px solid #ccc;
-    box-sizing: border-box;
-    resize: vertical;
+  .button {
+    padding: 8px 15px;
   }
-
-  /* X-Small Devices (phones, ≥380px) */
-  @media (max-width: 380px) {
-    .form {
-        grid-template-columns: 1fr;
-      }
-   }
+}
