--- a/src/app/(all-pages)/(other-pages)/gestor/InfraGestor/reservations/reservation.module.css
+++ b/src/app/(all-pages)/(other-pages)/gestor/InfraGestor/reservations/reservation.module.css
@@ -1,8 +1,8 @@
 .container {
-  padding: 20px;
+  padding: 0 20px;
   background-color: #ffffff;
   border-radius: 8px;
-  width: 100%;
+  width: calc(100% - 40px);
   max-width: 1200px;
   margin: auto;
 }
@@ -21,6 +21,7 @@
 .docInfo {
   display: flex;
   gap: 20px;
+  padding-top: 10px;
 }
 
 .buttonRow {
@@ -48,17 +49,26 @@
   font-weight: bold;
 }
 
+.formGroup .radio {
+  font-size: 14px;
+  font-weight: 500;
+  cursor: pointer;
+  margin-right: 40px;
+}
+
 .input {
   padding: 8px;
   border-radius: 4px;
   border: 1px solid #ccc;
   width: 100%;
   box-sizing: border-box;
+  cursor: pointer;
 }
 
 .tableContainer {
   margin-top: 20px;
   overflow-x: auto;
+  margin-bottom: 40px;
 }
 
 .table {
@@ -119,6 +129,10 @@
   .button {
     margin-bottom: 10px;
     width: 20%;
+  }
+
+  .docInfo {
+    margin-bottom: 10px;
   }
 }
 
