--- a/src/app/(all-pages)/(other-pages)/gestor/master/gesMaster.module.css
+++ b/src/app/(all-pages)/(other-pages)/gestor/master/gesMaster.module.css
@@ -6,11 +6,22 @@
     max-width: 1200px;
     margin: auto;
   }
+
+  .header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 10px;
+    background-color: rgba(128, 128, 128, 0.1);
+    padding: 0 20px 10px 20px;
+  }
   
   .title {
-    margin-bottom: 20px;
+    /* margin-bottom: 20px; */
     font-size: 24px;
     font-weight: bold;
+    /* font-size: 30px; */
+    letter-spacing: 1px;
   }
   
   /* Document Section */
@@ -18,7 +29,7 @@
     display: flex;
     justify-content: flex-start;
     gap: 20px;
-    margin-bottom: 20px;
+    margin-top: 10px;
   }
   
   .formGroup {
@@ -44,7 +55,7 @@
   /* Button Group - Aligned to the Right */
   .buttonGroup {
     display: flex;
-    justify-content: flex-end;
+    justify-content: flex-start;
     gap: 10px;
     margin-bottom: 20px;
   }
@@ -83,7 +94,7 @@
     cursor: pointer;
     font-size: 14px;
     font-weight: 400;
-    display: inline-flex;
+    /* display: inline-flex; */
     margin-right: 20px;
   }
   
