--- a/src/app/(all-pages)/(other-pages)/gestor/InfraGestor/cancel-reservation/canReserv.module.css
+++ b/src/app/(all-pages)/(other-pages)/gestor/InfraGestor/cancel-reservation/canReserv.module.css
@@ -1,16 +1,23 @@
 .container {
-    padding: 20px;
+    padding: 0 20px;
     background-color: #ffffff;
     border-radius: 8px;
-    width: 100%;
+    width: calc(100% - 40px);
     max-width: 1200px;
     margin: auto;
   }
   
+  .header {
+    margin-bottom: 10px;
+    padding: 1px 20px 10px 20px;
+    background-color: rgba(128, 128, 128, 0.1);
+    margin-bottom: 10px;
+  }
+
   .title {
-    margin-bottom: 20px;
     font-size: 24px;
     font-weight: bold;
+    letter-spacing: 1px;
   }
   
   .form {
