--- a/src/app/(all-pages)/(other-pages)/gestor/InfraGestor/reservations/reservation.module.css
+++ b/src/app/(all-pages)/(other-pages)/gestor/InfraGestor/reservations/reservation.module.css
@@ -12,10 +12,15 @@
   justify-content: space-between;
   align-items: center;
   margin-bottom: 10px;
+  padding: 0 20px 10px 20px;
+  background-color: rgba(128, 128, 128, 0.1);
 }
 
 .title {
   flex-grow: 1;
+  font-size: 24px;
+  font-weight: bold;
+  letter-spacing: 1px;
 }
 
 .docInfo {
