--- a/src/components/listView/listView.module.css
+++ b/src/components/listView/listView.module.css
@@ -1,5 +1,6 @@
 .container {
     width: 100%;
+    overflow: hidden;
   }
 
   .title {
@@ -13,9 +14,10 @@
   }
 
   .table {
-    width: calc(100% - 40px);
+    max-width: calc(100% - 40px);
     border-collapse: collapse;
     margin: 20px;
+    overflow-x: scroll;
   }
   
   .table th,
