--- a/src/components/verifiFormComp/verifyFormComp.module.css
+++ b/src/components/verifiFormComp/verifyFormComp.module.css
@@ -63,7 +63,7 @@
   margin-bottom: 20px;
 }
 
-.button, .backBtn {
+.button, .backBtn, .button1 {
   padding: 10px 20px;
   background-color: #007bff;
   color: white;
@@ -72,8 +72,17 @@
   cursor: pointer;
 }
 
+.button1 {
+  background-color: #d9534f;
+  color: white;
+}
+
 .button:hover, .backBtn:hover {
   background-color: #0056b3;
+}
+
+.button1:hover {
+  background-color: #c9302c;
 }
 
 .backBtn {
@@ -83,6 +92,15 @@
   height: 30px;
   padding: 5px;
   margin-right: 10px;
+}
+
+.vfLeft {
+  width: 58%;
+  height: 90%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 1%;
 }
 
 /* Form Fields Section */
