--- a/src/components/locationForm/locationForm.module.css
+++ b/src/components/locationForm/locationForm.module.css
@@ -114,7 +114,11 @@
     }
   
     .buttonGroup {
-      justify-content: center;
+      justify-content: flex-start;
+    }
+
+    .header {
+      flex-direction: column;
     }
   }
   
