--- a/src/components/createCostCenterComp/createCostCenterComp.module.css
+++ b/src/components/createCostCenterComp/createCostCenterComp.module.css
@@ -17,7 +17,7 @@
   }
   
   .title {
-    flex-grow: 1;
+    /* flex-grow: 1; */
     font-size: 24px;
     font-weight: bold;
     letter-spacing: 1px;
@@ -73,7 +73,7 @@
     gap: 10px;
   }
   
-  .button {
+  .button, .backBtn {
     padding: 10px 20px;
     background-color: #007bff;
     color: #fff;
@@ -82,8 +82,17 @@
     cursor: pointer;
   }
   
-  .button:hover {
+  .button:hover, .backBtn:hover {
     background-color: #0056b3;
+  }
+
+  .backBtn {
+    border-radius: 100%;
+    font-size: 20px;
+    width: 30px;
+    height: 30px;
+    padding: 5px;
+    margin-right: 10px;
   }
   
   /* Responsive Design */
