--- a/src/components/createSubLocation/SubLocation.module.css
+++ b/src/components/createSubLocation/SubLocation.module.css
@@ -97,7 +97,7 @@
     gap: 10px;
   }
   
-  .button {
+  .button, .backBtn {
     padding: 10px 20px;
     background-color: #007bff;
     color: #fff;
@@ -106,8 +106,17 @@
     cursor: pointer;
   }
   
-  .button:hover {
+  .button:hover, .backBtn:hover {
     background-color: #0056b3;
+  }
+
+  .backBtn {
+    border-radius: 100%;
+    font-size: 20px;
+    width: 30px;
+    height: 30px;
+    padding: 5px;
+    margin-right: 10px;
   }
   
   /* Responsive Design */
