--- a/src/components/reservationsComp/reservation.module.css
+++ b/src/components/reservationsComp/reservation.module.css
@@ -99,7 +99,7 @@
   
 }
 
-.button {
+.button, .backBtn {
   padding: 10px 20px;
   background-color: #007bff;
   color: #fff;
@@ -108,8 +108,17 @@
   cursor: pointer;
 }
 
-.button:hover {
+.button:hover, .backBtn:hover {
   background-color: #0056b3;
+}
+
+.backBtn {
+  border-radius: 100%;
+  font-size: 20px;
+  width: 30px;
+  height: 30px;
+  padding: 5px;
+  margin-right: 10px;
 }
 
 /* Responsive Design */
