--- a/src/styles/formCompsStyles.module.css
+++ b/src/styles/formCompsStyles.module.css
@@ -81,6 +81,12 @@ display: flex;
 flex-direction: column;
 }
 
+.formBody2 {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 20px;
+}
+
 .formBody .formGroup {
 margin-bottom: 20px;
 }
@@ -108,6 +114,14 @@ padding: 8px;
 border-radius: 4px;
 border: 1px solid #ccc;
 width: 50%;
+box-sizing: border-box;
+}
+
+.inputField2 {
+padding: 8px;
+border-radius: 4px;
+border: 1px solid #ccc;
+width: 100%;
 box-sizing: border-box;
 }
 
@@ -240,6 +254,10 @@ padding: 10px 0;
 
     .formBody {
         flex-direction: column;
+    }
+
+    .formBody2 {
+      grid-template-columns: 1fr;
     }
 
     .header{
